<resources>
    <string name="app_name">loginApp</string>
    <string name="Register">Register</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>
    <string name="username">username</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">REGISTER</string>
    <string name="Login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
