<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:background="#adad"

        android:gravity="center">
    <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/rsz_1helloworld"
            android:layout_marginBottom="50dp"
            android:layout_height="wrap_content"/>
    <TextView android:layout_width="wrap_content"
              android:textColor="#ff0000"
              android:id="@+id/mistakes"
              android:layout_marginBottom="20dp"
              android:textStyle="bold|italic"
              android:textSize="15sp"
              android:layout_height="wrap_content"/>
    <EditText
            android:layout_width="200dp"

            android:layout_height="50dp"
            android:id="@+id/editText_username"
            android:drawableLeft="@drawable/rsz_user"
            android:background="@drawable/box_round"

            android:hint="@string/username"/>
    <EditText
            android:layout_width="200dp"
            android:layout_marginTop="15dp"
            android:layout_height="50dp"
            android:id="@+id/editText_email"
            android:inputType="textEmailAddress"
            android:background="@drawable/box_round"

            android:hint="email"/>
    <EditText
            android:layout_width="200dp"
            android:id="@+id/editText_password"
            android:hint="@string/password"
            android:background="@drawable/box_round"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"


    />
    <EditText
            android:layout_width="200dp"
            android:id="@+id/editText_password1"
            android:hint="@string/confirm_password"
            android:background="@drawable/box_round"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:layout_marginBottom="15dp"

    />
    <Button
            android:layout_width="170dp"
            android:id="@+id/button_register"
            android:text="@string/register"
            android:onClick="buttonClick1"
            android:background="@drawable/box_round1"
            android:layout_height="wrap_content"
    />
    <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already Registered?   "
        />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/Login"
                  android:textColor="#ff0000"
                  android:id="@+id/textView_login"
                  android:onClick="buttonClick1"
        />
    </LinearLayout>

</LinearLayout>