<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:background="#eee"

        android:gravity="center">
    <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/rsz_1helloworld"
            android:layout_marginBottom="50dp"
            android:layout_height="wrap_content"/>
    <TextView android:layout_width="wrap_content"
              android:textColor="#ff0000"
              android:id="@+id/mistakes1"
              android:layout_marginBottom="20dp"
              android:textStyle="bold|italic"
              android:textSize="15sp"
              android:layout_height="wrap_content"/>
    <EditText
            android:layout_width="200dp"

            android:layout_height="50dp"
            android:id="@+id/editText_uuname"
            android:drawableLeft="@drawable/rsz_user"
            android:background="@drawable/box_round"

            android:hint="username"/>
    <EditText
            android:layout_width="200dp"
            android:id="@+id/editText_password"
            android:hint="@string/password"
            android:background="@drawable/box_round"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/rsz_lock"
    />
    <Button
            android:layout_width="170dp"
            android:id="@+id/button_login"
            android:text="@string/login"
            android:onClick="buttonClick"
            android:layout_height="wrap_content"
    />
    <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Not Registered?   "
        />
        <TextView android:layout_width="88dp" android:layout_height="wrap_content"
                  android:text="@string/Register"
                  android:id="@+id/textView_register"
                  android:onClick="buttonClick"
                  android:textColor="#ff0000"
        />
    </LinearLayout>

</LinearLayout>